--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,7 +5,7 @@
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
             {{#userName}}
-                Logged in as : <span id="user">{{userName}}</span>
+                Logged in as : <span id="user">{{userName}}</span><!--userName 버그있음-->
                 <a href="/logout" class="btn btn-info active" role="button">LogOut</a>
             {{/userName}}
             {{^userName}}
